--- a/index.html
+++ b/index.html
@@ -29,12 +29,9 @@ Notes for the _first_ slide!
 
 ---
 
-# Agenda
-
-1. Introduction
-2. Survey of tools and needs
-3. Looking for automation
-4. Creating an accessible and secure workflow
+# Personal Pronouns
+Cicero uses _ego_ to emphaise his role in protecting himself in Constrast with Catiline (_tū_) who has sent the men.
+> quōs ego iam multīs ac summīs virīs ad mē
 
 ---
 
