--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Notes for the _first_ slide!
 ---
 
 # Personal Pronouns
-Cicero uses _ego_ to emphaise his role in protecting himself in Constrast with Catiline (_tū_) who has sent the men.
+Cicero uses _ego_ to emphaise his role in protecting himself, in contrast with Catiline (_tū_) who has sent the men.
 > quōs ego iam multīs ac summīs virīs ad mē
 
 ---
