--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@ Notes for the _first_ slide!
 ---
 
 # Personal Pronouns
-Cicero uses _ego_ to emphaise his role in protecting himself, in contrast with Catiline (_tū_) who has sent the men.
+Cicero uses _ego_ to emphaise his role in protecting himself, in contrast with Catiline (_tū_) who has sent the men to attack him.
 > quōs ego iam multīs ac summīs virīs ad mē
 
 ---
 
-# Introduction
-
-      It's possible to embed images.
-![](https://cdn.shopify.com/s/files/1/0051/4802/products/mona-1_large.jpg?v=1511308586)
+# Parallelism
+Cicero uses a parallel structure and a but of repetition to emphasize his issues with Catiline's actions.
+> nōn feram, nōn patiar, nōn sinam.
 
 ---
 
