--- a/index.html
+++ b/index.html
@@ -31,18 +31,20 @@ Notes for the _first_ slide!
 
 # Personal Pronouns
 Cicero uses _ego_ to emphaise his role in protecting himself, in contrast with Catiline (_tū_) who has sent the men to attack him.
-> quōs ego iam multīs ac summīs virīs ad mē
+> "quōs ego iam multīs ac summīs virīs ad mē
 
 ---
 
 # Parallelism
-Cicero uses a parallel structure and a but of repetition to emphasize his issues with Catiline's actions.
-> nōn feram, nōn patiar, nōn sinam.
+Cicero uses a parallel structure and a bit of repetition to emphasize his issues with Catiline's actions.
+> "nōn feram, nōn patiar, nōn sinam.
 
 ---
 
-# Survey of tools and needs
-
+# Diction
+Cicero specifically refers to the gods as _immortālibus_/immortal, and begins the sentence directly by giving thanks.
+> Magna dīs immortālibus habenda est atque huic ipsī Iovī Statōrī
+      
 ---
 
 # Looking for automation
