--- a/index.html
+++ b/index.html
@@ -21,34 +21,39 @@
 
 class: center, middle
 
-# Your Workflow & the GitHub Platform
-
-???
-
-Notes for the _first_ slide!
+# Chapter 59 - Cicero's use of language
+Arrow keys or scroll to navigate.
 
 ---
 
 # Personal Pronouns
 Cicero uses _ego_ to emphaise his role in protecting himself, in contrast with Catiline (_tū_) who has sent the men to attack him.
 > "quōs ego iam multīs ac summīs virīs ad mē
-
+B
 ---
 
 # Parallelism
 Cicero uses a parallel structure and a bit of repetition to emphasize his issues with Catiline's actions.
 > "nōn feram, nōn patiar, nōn sinam.
-
+B
 ---
 
 # Diction
 Cicero specifically refers to the gods as _immortālibus_/immortal, and begins the sentence directly by giving thanks.
 > Magna dīs immortālibus habenda est atque huic ipsī Iovī Statōrī
-      
+ C     
 ---
 
-# Looking for automation
+# Rhetorical Devices
+Cicero uses a rhetorical question to make his audience think about the crimes of Catiline.
+> Senātus haec intellegit, cōnsul videt; hic tamen vīvit. Vīvit?
+A
+---
 
+# Rhetorical Devices
+Cicero uses a rhetorical question to make his audience think about the crimes of Catiline.
+> Senātus haec intellegit, cōnsul videt; hic tamen vīvit. Vīvit?
+A
 ---
 
 # Creating an accessible and secure workflow
