--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@ B
 
 # Diction
 Cicero specifically refers to the gods as _immortālibus_/immortal, and begins the sentence directly by giving thanks.
-> Magna dīs immortālibus habenda est atque huic ipsī Iovī Statōrī
+> "Magna dīs immortālibus habenda est atque huic ipsī Iovī Statōrī
  C     
 ---
 
 # Rhetorical Devices
 Cicero uses a rhetorical question to make his audience think about the crimes of Catiline.
-> Senātus haec intellegit, cōnsul videt; hic tamen vīvit. Vīvit?
+> "Senātus haec intellegit, cōnsul videt; hic tamen vīvit. Vīvit?
 A
 ---
 
 # Rhetorical Devices
-Cicero uses a rhetorical question to make his audience think about the crimes of Catiline.
-> Senātus haec intellegit, cōnsul videt; hic tamen vīvit. Vīvit?
-A
+Cicero speaks directly to catiline at the begining of this passage, making the speech much more adversarial. 
+> "Nunc iam apertē rem pūblicam ūniversam petis
+D
 ---
 
 # Creating an accessible and secure workflow
