--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@ Arrow keys or scroll to navigate.
 ---
 
 # Personal Pronouns
-Cicero uses _ego_ to emphaise his role in protecting himself, in contrast with Catiline (_tū_) who has sent the men to attack him.
+Cicero uses _ego_ to emphaise his role in protecting himself, in contrast with Catiline (_tū_) who has sent the men to attack him. This creates an increased seperation between the two and serves the purpose of framing Cicero's argument as good vs evil.
 > "quōs ego iam multīs ac summīs virīs ad mē
-B
+(B)
 ---
 
 # Parallelism
-Cicero uses a parallel structure and a bit of repetition to emphasize his issues with Catiline's actions.
+Cicero uses a parallel structure and a bit of repetition to emphasize his issues with Catiline's actions. By having this bit situated at the end of his rant Cicero drives home his point and creates a sense of finality in how he wont be dissauded from attacking Catiline.
 > "nōn feram, nōn patiar, nōn sinam.
-B
+(B)
 ---
 
 # Diction
-Cicero specifically refers to the gods as _immortālibus_/immortal, and begins the sentence directly by giving thanks.
+Cicero specifically refers to the gods as _immortālibus_/immortal, and begins the sentence directly by giving thanks. By thanking the gots Cicero establishes himself as a good Roman who follows tradition, in constrast to Catiline who seeks to create a bit of a revolution.
 > "Magna dīs immortālibus habenda est atque huic ipsī Iovī Statōrī
- C     
+ (C)    
 ---
 
 # Rhetorical Devices
-Cicero uses a rhetorical question to make his audience think about the crimes of Catiline.
+Cicero uses a rhetorical question to make his audience think about the crimes of Catiline. This question makes it apparent that Cicero sees it has fitting for Catiline to be killed, and it rather suprised by the continued innaction of the senate.
 > "Senātus haec intellegit, cōnsul videt; hic tamen vīvit. Vīvit?
-A
+(A)
 ---
 
 # Rhetorical Devices
-Cicero speaks directly to catiline at the begining of this passage, making the speech much more adversarial. 
+Cicero speaks directly to catiline at the begining of this passage, making the speech much more adversarial. Presumably Catiline was present at the speech however because Cicero was the one speaking he'd be able to directly attack Catiline without Catiline being able to defend himself.
 > "Nunc iam apertē rem pūblicam ūniversam petis
-D
+(D)
 ---
 
 # Creating an accessible and secure workflow
