--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@ Cicero speaks directly to catiline at the begining of this passage, making the s
 > "Nunc iam apertē rem pūblicam ūniversam petis
 (D)
 ---
+      
+# Parallelism
+Cicero uses a parallel structure in this phrase to add a bit of flow to his speech. He claims that both the senate and the consul should eb aware of Catiline's crimes and side with Cicero, and by phrasing it as a list it may add a bit of a feeling that there are many factors, despite only mentioning those two entities.
+> "Senātus haec intellegit, cōnsul videt; hic tamen vīvit
+(A)
+---
 
 # Creating an accessible and secure workflow
 
