--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@ Cicero uses a parallel structure in this phrase to add a bit of flow to his spee
 > "Senātus haec intellegit, cōnsul videt; hic tamen vīvit
 (A)
 ---
+      
+# Personal Pronouns
+Cicero reffers to Catiline's 'nefarious' plots, by specifically reffering to them was 'your' conatus nefarios Cicero assosiates both the plans and the nefarious nature of said plans with Catiline. This works well when attacking Catiline because it's harder to disagree with a statement that has a bit of truth in it- Catiline did have plans, he'd probably disagree as to their nature though.
+> "compressī cōnātūs tuōs nefāriōs amīcōrum praesidiō
+
 
 # Creating an accessible and secure workflow
 
