--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Cicero uses a parallel structure and a bit of repetition to emphasize his issues
 ---
 
 # Diction
-Cicero specifically refers to the gods as _immortālibus_/immortal, and begins the sentence directly by giving thanks. By thanking the gots Cicero establishes himself as a good Roman who follows tradition, in constrast to Catiline who seeks to create a bit of a revolution.
+Cicero specifically refers to the gods as _immortālibus_/immortal, and begins the sentence directly by giving thanks. By thanking the gods Cicero establishes himself as a good Roman who follows tradition, in constrast to Catiline who seeks to create a bit of a revolution.
 > "Magna dīs immortālibus habenda est atque huic ipsī Iovī Statōrī
  (C)    
 ---
@@ -62,10 +62,16 @@ Cicero uses a parallel structure in this phrase to add a bit of flow to his spee
 (A)
 ---
       
-# Personal Pronouns
-Cicero reffers to Catiline's 'nefarious' plots, by specifically reffering to them was 'your' conatus nefarios Cicero assosiates both the plans and the nefarious nature of said plans with Catiline. This works well when attacking Catiline because it's harder to disagree with a statement that has a bit of truth in it- Catiline did have plans, he'd probably disagree as to their nature though.
-> "compressī cōnātūs tuōs nefāriōs amīcōrum praesidiō
+# Diction
+Cicero reffers to Catiline's assosiates as dangerous dregs which will _exhauriētur_/be drained out of the city. This use of the verb dehumanizes Catilines coconspirators to some extent and diminutizes them as somthing that would drain out rather than leave or martch out like normal Romans.
+> "exhauriētur ex urbe tuōrum comitum magna et perniciōsa sentīna reī pūblicae
 (C)
+---
+
+# Rhetorical Devices
+Cicero speaks directly to catiline at the begining of this passage, making the speech much more adversarial. Presumably Catiline was present at the speech however because Cicero was the one speaking he'd be able to directly attack Catiline without Catiline being able to defend himself.
+> "Nunc iam apertē rem pūblicam ūniversam petis
+(D)
 ---
 
 
