--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Cicero specifically refers to the gods as _immortālibus_/immortal, and begins t
       (C)    
 ---
 
-# Reppetition
+# Repetition
 Cicero repeats his urging for Catiline to leave the city, first mentioning it, then explaining why he believes Catiline should leave, and then once more urging him to leave. By repeating his request like this Cicero reminds the audience as to the point of his speech, and it works as a bit of a call-to-action.
 > "quod tē iam dūdum hortor ... nōn iubeō, sed, sī mē cōnsulis, suādeō
 
@@ -82,7 +82,7 @@ Cicero refers to Catiline's associates as dangerous dregs which will _exhauriēt
       (C)
 ---
 
-# Reppetition
+# Repetition
 Cicero repeats his urging for Catiline to leave the city, first mentioning it, then explaining why he believes Catiline should leave, and then once more urging him to leave. By repeating his request like this Cicero reminds the audience as to the point of his speech, and it works as a bit of a call-to-action.
 > "quod tē iam dūdum hortor ... nōn iubeō, sed, sī mē cōnsulis, suādeō
 
@@ -96,7 +96,7 @@ Cicero once again draws attention to his prowess in contrast to Catiline's incom
       (B)
 ---
 
-# Reppetition
+# Repetition
 Cicero repeats how Catiline had attacked him 3 times and in each repetition describes another way he acted to stop the treachery. This segment serves to further the point that Cicero was wronged and prolong what is essentially a declaration of victory, Cicero also increases the scale of the description of his responses each time, eventually concluding that he saved the entire republic by fighting against Catiline.
 > "Catilīna, īnsidiātus es ... tuōs interficere voluistī ... uotiēnscumque mē petīstī
 
